# spaceterm

./: .gitignore  Cargo.toml  Makefile  README.md  config.default.kdl
clients/: client.sh
clients/client-py/: README.md  pyproject.toml
clients/client-py/src/spaceterm/: __init__.py  _repr.py  _wire.py
clients/client-py/tests/: test_emit.py
crates/bench/: Cargo.toml  README.md
crates/bench/frontend/: esbuild.mjs  harness.ts  index.html  package.json
crates/bench/src/: corpus.rs  glyphon.rs  main.rs  report.rs  webgl.rs
crates/bindings/: Cargo.toml  package.json  test.cjs
crates/bindings/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: dump_session.rs
crates/core/src/: block.rs  lib.rs  parser.rs  pty.rs  scrollback.rs
crates/core/tests/: pty.rs
crates/mux/: Cargo.toml
crates/mux/src/: client.rs  lib.rs  protocol.rs  remote.rs  resilience.rs  server.rs  session.rs
crates/proto/: Cargo.toml
crates/proto/src/: bundle.rs  caps.rs  lib.rs  message.rs  tier.rs  wire.rs
crates/render/: Cargo.toml
crates/render/assets/fonts/: LICENSE-FiraCode-OFL.txt
crates/render/src/: bg.wgsl  chrome.rs  gpu.rs  grid.rs  image.rs  image.wgsl  lib.rs  markdown.rs  renderer.rs  screen.rs  theme.rs
crates/spacecat/: Cargo.toml
crates/spacecat/src/: main.rs  media.rs
crates/spaceterm/: Cargo.toml  README.md
crates/spaceterm/src/: app.rs  config.rs  input.rs  lib.rs  main.rs  pane.rs  session.rs  webview.rs
crates/spaceterm/src/app/: actions.rs  blocks.rs  chrome.rs  init.rs  mod.rs  prompt_edit.rs  render.rs  session_restore.rs
crates/spaceterm/src/app/navigation/: mod.rs  quick_select.rs  search.rs  vim.rs
crates/spaceterm/src/app/pointer/: clipboard.rs  mod.rs  mouse.rs
crates/spaceterm/src/config/: mod.rs
crates/spaceterm/src/model/: input.rs  layout.rs  mod.rs  mode.rs  palette.rs  settings_page.rs
crates/spaceterm/src/session/: mod.rs
crates/spaceterm/src/terminal/: block_queue.rs  block_shell.html  mod.rs  pane.rs  settings.html  settings_view.rs  webview.rs
crates/webview-probe/: Cargo.toml
crates/webview-probe/src/: main.rs
docs/: terminal-block-protocol-spec.md  unified-renderer-plan.md  usage-guide.md
frontend/block-renderer/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/block-renderer/src/: block-renderer.ts  index.ts  sandbox.ts  types.ts
frontend/block-renderer/test/: block-renderer.test.ts
frontend/palette/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/palette/src/: filter.ts  index.ts  palette.ts  vscode-palette.ts
frontend/palette/test/: filter.test.ts
frontend/rich-renderers/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/rich-renderers/src/: index.ts
frontend/rich-renderers/test/: rich-renderers.test.ts
frontend/vscode-ext/: README.md  esbuild.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/vscode-ext/media/: spaceterm.css  tsconfig.json  webview.ts
frontend/vscode-ext/src/: extension.ts  spaceterm-addon.ts  terminal-session.ts
samples/: keybindings.kdl  settings.kdl
