[workspace]
members = ["crates/spaceterm", "crates/bindings", "crates/core", "crates/mux", "crates/proto", "crates/render"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taquangtrung/spaceterm"
homepage = "https://github.com/taquangtrung/spaceterm"
keywords = ["terminal", "pty", "multiplexer", "terminal-emulator"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-build = "2"
napi-derive = "2"
spaceterm-core = { version = "0.1.0", path = "crates/core" }
spaceterm-mux = { version = "0.1.0", path = "crates/mux" }
spaceterm-proto = { version = "0.1.0", path = "crates/proto" }
spaceterm-render = { version = "0.1.0", path = "crates/render" }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
vte = "0.13"
wgpu = "29"
