[project]
name = "spaceterm-client"
version = "0.1.0"
description = "Python client for SpaceTerm's Terminal Block Protocol (TBP)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spaceterm"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
