[package]
name = "spaceterm-bench"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Renderer benchmark: measures whether xterm.js + @xterm/addon-webgl (in a wry
# webview) keeps up with the native wgpu + glyphon renderer on a fixed VT
# corpus. Phase 0 gate from docs/unified-renderer-plan.md. Not shipped.

[[bin]]
name = "spaceterm-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
spaceterm-render.workspace = true
wgpu = "29"
winit = "0.30"
wry = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
