[package]
name = "spaceterm-proto"
version = "0.1.0"
description = "Terminal Block Protocol (TBP) v1: wire types and codec."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
