[package]
name = "spaceterm-render"
version = "0.1.0"
description = "SpaceTerm terminal screen model: a VT-driven cell grid (CPU side of the text grid)."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
glyphon = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
pollster = "0.4"
pulldown-cmark = { version = "0.12", default-features = false }
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
vte.workspace = true
wgpu = "29"
