[package]
name = "spacecat"
description = "Display a file as a rich, MIME-tagged SpaceTerm block (image, SVG, Markdown, ...), like `cat` for multimedia."
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "spacecat"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde_json.workspace = true
spaceterm-proto.workspace = true
